--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
 @tailwind base;
 @tailwind components;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&family=Satisfy&display=swap");
 @tailwind utilities;
